--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="utf-8"/>
     <link rel="icon" href="favicon.ico"/>
+    <meta name="description" content="mern chat">
+    <meta name="keywords" content="react,mern,chat,online,web"/>
+    <meta property="og:title" content="Online web-chat created with MERN"/>
+    <meta property="og:type" content="profile"/>
+    <meta property="og:url" content="https://cdscdcsdcd.com"/>
+    <meta property="og:image" content="favicon.ico"/>
+    <meta property="og:description" content="faviconico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#ff0000"/>
     <title>Chat App</title>
