--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Online web-chat created with MERN"/>
     <meta property="og:type" content="profile"/>
     <meta property="og:url" content="https://cdscdcsdcd.com"/>
-    <meta property="og:image" content="favicon.ico"/>
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/76526633?v=4"/>
     <meta property="og:description" content="faviconico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#ff0000"/>
