--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="favicon.ico"/>
+    <link rel="icon" href="favicon.svg"/>
     <meta name="description" content="mern chat">
     <meta name="keywords" content="react,mern,chat,online,web"/>
-    <meta property="og:title" content="Online web-chat created with MERN"/>
+    <meta property="og:title" content="Realtime chat (MERN stack)"/>
+    <meta property="og:description" content="Description"/>
     <meta property="og:type" content="profile"/>
-    <meta property="og:url" content="https://cdscdcsdcd.com"/>
-    <meta property="og:image" content="https://avatars.githubusercontent.com/u/76526633?v=4"/>
-    <meta property="og:description" content="faviconico"/>
+    <meta property="og:url" content="https://chat-airfun.netlify.app/"/>
+    <meta property="og:image" content="favicon.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#ff0000"/>
+    <meta name="theme-color" content="#1890ff"/>
     <title>Chat App</title>
 </head>
 <body>
