--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Realtime chat (MERN stack)"/>
     <meta property="og:type" content="profile"/>
     <meta property="og:url" content="https://chat-airfun.netlify.app/"/>
-    <meta property="og:image" content="https://res.cloudinary.com/dm96pyie3/image/upload/v1648752138/iwatch/xo7vlscur755jcnqhlj6.svg"/>
+    <meta property="og:image" content="https://res.cloudinary.com/dm96pyie3/image/upload/v1648752498/iwatch/pgmjnhbbi0wr7xl4uik1.png"/>
     <meta property="og:description" content="Description"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#1890ff"/>
